# when-and-weather

./: .gitignore  LICENSE  README.md
back-end-parade/: pom.xml
back-end-parade/src/http/: GETanalise.http
back-end-parade/src/main/resources/: application.properties
data/: pyproject.toml
data-parade/: .gitignore  pyproject.toml
data-parade/main/: app.py
data-parade/main/api/routes/: WeatherForecastRoutes.py
data-parade/main/common/utils/: DateTimeUtils.py
data-parade/main/config/: Config.py  HttpConfig.py
data-parade/main/domain/constants/: KeyMapConstants.py
data-parade/main/domain/dtos/: WeatherForecastRequestDto.py  WeatherForecastResponseDto.py
data-parade/main/domain/services/: WeatherForecastService.py
data-parade/main/infrastructure/http/: HttpContext.py  (+1 more)
data/main/: app.py
data/main/api/routes/: MonitoringRoutes.py  WeatherForecastRoutes.py
data/main/api/swagger/models/: WeatherForecastSwaggerModels.py
data/main/common/utils/: DateTimeUtils.py
data/main/config/: Config.py  HttpConfig.py
data/main/domain/services/: WeatherForecastService.py
data/main/domain/validations/: StringValidations.py
data/main/infrastructure/http/: GeocodeHttpContext.py  WeatherForecastHttpContext.py
data/main/routes/: MonitoringRoutes.py  WeatherForecastRoutes.py
front-end-parade/: README.md  index.html  package-lock.json  package.json
front-end-parade/src/: App.tsx  configAxios.ts
front-end-parade/src/services/: tempRequests.ts
front-end-parade/src/types/: temp.d.ts
front-end-parade/src/utils/: axiosRequest.ts
(+13 files in other folders)
